--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/jungwonseong/tobepublic.git"
   },
-  "author": "",
+  "author": "@jungwonseong",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jungwonseong/tobepublic/issues"
